cabal-version:       2.4
name:                escaping-agents
version:             0.1.0.0
license-file:        LICENSE
author:              John Haynes
maintainer:          john.andrew.haynes@gmail.com
build-type:          Simple
extra-source-files:  CHANGELOG.md

library maze-common
  exposed-modules:     Agent, Maze, Direction, Rand
  ghc-options:         -Wall -O3
  default-language:    Haskell2010
  build-depends:       array, base, containers, random, mtl, safe, text
  hs-source-dirs:      maze-common

executable maze-gen
  main-is:             MazeGen.hs
  ghc-options:         -Wall -O3
  build-depends:       array, base, maze-common, random, text
  hs-source-dirs:      maze-gen
  default-language:    Haskell2010

executable escape
  main-is:             Escape.hs
  ghc-options:         -Wall -O3
  build-depends:       base, containers, maze-common, random, text
  hs-source-dirs:      escape
  default-language:    Haskell2010

executable maze-server
  main-is:             Main.hs
  ghc-options:         -Wall -O3
  other-modules:       Controller
  build-depends:       base, lens, maze-common, swagger2, servant-swagger, servant-swagger-ui, servant, servant-server, text, wai, warp
  hs-source-dirs:      maze-server
  default-language:    Haskell2010
